@@ -1,3 +1,14 @@
+2002-04-17  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* db-debug.c:
+	* db-insert.c:
+	* db-manage.c:
+	* dbtest.c:
+	* db-travel.c:
+	* db.h: add file locking and necessary stuff to allow
+	  plugging db in an imbedded file format like oprofile
+	  samples files.
+
 2002-04-16  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* db-manage.c: silly bug fix, db works now with
